Thu Aug  1 14:34:51 1996  Barry Jaspan  <bjaspan@DUN-DUN-NOODLES>

	* Makefile.in, Makefile.ov, configure.in, dump.c: add support for
        dump/load of OV*Secure-compatible format.

Wed Jul 31 14:55:38 1996  Tom Yu  <tlyu@mit.edu>

	* kdb5_stash.c (kdb5_stash): Declare optind.

Sat Jul 27 02:16:01 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdb5_create.c (kdb5_create): Ignore (expected) failure in
		open_db_and_mkey when creating database in returning exit
		status.

Tue Jul 23 17:03:42 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in: add dependency for kdb5_util_ct.o

Thu Jul 18 19:22:04 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in: removed SS_RULES

Wed Jul 10 19:43:22 1996  Marc Horowitz  <marc@mit.edu>

	* dumpv4.c (configure.in, Makefile.in): make autoconf work after
 	barry's carnage

Sun May 12 00:27:44 1996  Marc Horowitz  <marc@mit.edu>

	* loadv4.c (enter_in_v5_db, add_principal), kdb5_edit.c
 	(create_db_entry, modent), dumpv4.c (dump_v4_iterator), dump.c
 	(dump_k5beta_iterator, process_k5beta_record): convert to use new
 	krb5_dbe_* tl_data functions.

	* cpw.c (enter_pwd_key): krb5_dbe_cpw() takes a kvno now.

Tue May  7 23:16:57 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in: USE_KADM_LIBRARY replaced by USE_KADMSRV_LIBRARY

Thu Apr 11 19:32:36 1996  Richard Basch  <basch@lehman.com>

	* kdb5_edit.c (extract_v4_srvtab): Use the matching key_data's kvno;
	don't assume that key_data[0]'s kvno is necessarily the matching
	key_data's kvno.

Wed Apr 10 19:17:58 1996  Richard Basch  <basch@lehman.com>

	* kdb5_edit.c (extract_v4_srvtab): Translate the principal name to
	the common V4 name.

Tue Mar 19 18:00:58 1996  Richard Basch  <basch@lehman.com>

	* kdb5_edit.c (extract_v4_srvtab): do not test to make sure we
	fetched a key of enctype 1 (des-cbc-crc), since we may have gotten
	another des key from the database, which is just as useful in a
	v4 srvtab
